# Matrix-Magiq-ELXR

./: Cargo.toml  README.md
contracts/supply-chain/: delivery.rs
contracts/verification/: fermentation-verification.rs
docs/: GRANT_PROPOSAL.md
frontend/leptos-app/: Cargo.toml
frontend/leptos-app/src/components/: registry.rs
frontend/nextjs/: package.json
frontend/nextjs/rust-api/: Cargo.toml
frontend/nextjs/rust-api/src/: kombucha.rs  lib.rs
src/pallet/: kombucha-registry.rs  lib.rs  oracle.rs  registry.rs
src/parachain/: mod.rs
src/telemetry/: mod.rs
