[package]
name = "ELXR"
version = "0.1.0"
edition = "2021"
authors = ["Matrix-Magiq Ecosystem Developers"]
description = "ELXR implementation in the Matrix-Magiq ecosystem"
license = "GPL-3.0"

[dependencies]
# Core Substrate dependencies
substrate-primitives = { git = "https://github.com/paritytech/substrate.git" }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate.git" }
frame-system = { git = "https://github.com/paritytech/substrate.git" }

# Quantum-resistant crypto
post-quantum = { path = "../quantum" }

# Error correction
reed-solomon = "0.2.1"
quantum-surface-codes = { path = "../quantum/surface_codes" }

[features]
default = ["std"]
std = [
    "substrate-primitives/std",
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
]
